--- a/Angular/eBarter/src/app/components/items-im-bidding-on/items-im-bidding-on.component.html
+++ b/Angular/eBarter/src/app/components/items-im-bidding-on/items-im-bidding-on.component.html
@@ -8,7 +8,6 @@
 <br>
 <br>
 <br>
-<h1>Test</h1>
 
 <!-- <div id="showOffersForItemsThisUserIsbiddingOn"class="card-deck" style="width: 70rem;" *ngFor="let item of items">
   <div class="card">
@@ -31,25 +30,28 @@
     </div>
   </div>
 </div> -->
-
 <div id="showOffersForItemsThisUserHasWon" class="card-deck" style="width: 70rem;" *ngFor="let item of items">
 
   <div *ngIf="item.itemStatus == 1">
-    <!-- <div *ngIf="item.offer.length > 0"> -->
-      <div *ngFor="let offer of item.offer">
+    <!-- <h1>{{item.description}}</h1> -->
+    <div *ngIf="item.offers.length > 0">
+      <div *ngFor="let offer of item.offers">
+        <br>
+        <br>
+        <br>
         <!-- <div *ngIf="offer.offer_status_id == 2"> -->
-          <!-- <h1>{{offer.offer_status_id}}</h1> -->
-          <img class="card-img-top" *ngIf="offer.user.id == isBidder.id"
-            src="https://rukminim1.flixcart.com/image/332/398/watch/5/h/y/curren-8152-curren-original-imaecw9g7hqp85nw.jpeg?q=50"
-            alt="Card image cap" href="#/">
-          <span *ngIf="offer.user.id == isBidder.id">{{item.name}}</span>
-          <br>
-          <span *ngIf="offer.user.id == isBidder.id">{{item.description}}</span>
-          <br>
-          <span *ngIf="offer.user.id == isBidder.id">{{offer.description}}</span>
-          <br>
-        </div>
+        <!-- <h1>{{offer.offer_status_id}}</h1> -->
+        <h1>Items Bid On</h1>
+        <img class="card-img-top" *ngIf="offer.user.id == isBidder.id"
+          src="https://rukminim1.flixcart.com/image/332/398/watch/5/h/y/curren-8152-curren-original-imaecw9g7hqp85nw.jpeg?q=50"
+          alt="Card image cap" href="#/">
+        <span *ngIf="offer.user.id == isBidder.id">{{item.name}}</span>
+        <br>
+        <span *ngIf="offer.user.id == isBidder.id">{{item.description}}</span>
+        <br>
+        <span *ngIf="offer.user.id == isBidder.id">{{offer.description}}</span>
+        <br>
       </div>
     </div>
-  <!-- </div>
-</div> -->
+  </div>
+</div>
