--- a/Angular/eBarter/src/app/components/items-won/items-won.component.css
+++ b/Angular/eBarter/src/app/components/items-won/items-won.component.css
@@ -1,11 +1,14 @@
-#showOffersForItemsThisUserIsbiddingOn{
-  display: -webkit-box;
-  flex: 1 0 0%;
-  flex-direction: column;
-  margin-right: 15px;
-  margin-bottom: 10px;
-  margin-left: 15px;
-  max-width: 320px;
-  margin-top: 30px;
+/* #showOffersForItemsThisUserHasWon{
+  margin-left: 500px;
+} */
+.card-img-top {
+  width: 100%;
+  border-top-left-radius: calc(0.25rem - 1px);
+  border-top-right-radius: calc(0.25rem - 1px);
+  size: 400px;
+  border-radius: 10%;
 }
-
+span[_ngcontent-c2] {
+  text-align: center;
+  margin-left: 10px;
+}
