--- a/Angular/eBarter/src/app/components/items-won/items-won.component.html
+++ b/Angular/eBarter/src/app/components/items-won/items-won.component.html
@@ -8,7 +8,6 @@
 <br>
 <br>
 <br>
-<h1>Test</h1>
 
 <!-- <div id="showOffersForItemsThisUserIsbiddingOn"class="card-deck" style="width: 70rem;" *ngFor="let item of items">
   <div class="card">
@@ -32,18 +31,48 @@
   </div>
 </div> -->
 
-<div id="showOffersForItemsThisUserIsbiddingOn" class="card-deck" style="width: 70rem;" *ngFor="let item of items">
-  <div *ngIf="item.offer.length > 0">
-    <div *ngFor="let offer of item.offer">
-      <img class="card-img-top" *ngIf="offer.user.id == isBidder.id"
-        src="https://rukminim1.flixcart.com/image/332/398/watch/5/h/y/curren-8152-curren-original-imaecw9g7hqp85nw.jpeg?q=50"
-        alt="Card image cap" href="#/">
-      <span *ngIf="offer.user.id == isBidder.id">{{item.name}}</span>
-      <br>
-      <span *ngIf="offer.user.id == isBidder.id">{{item.description}}</span>
-      <br>
-      <span *ngIf="offer.user.id == isBidder.id">{{offer.description}}</span>
-      <br>
+<!-- <div id="showOffersForItemsThisUserIsbiddingOn" class="card-deck" style="width: 70rem;" *ngFor="let item of items">
+  <div *ngIf="item.offers.length > 0">
+    <div *ngFor="let offer of item.offers">
+      <div *ngIf="offer_status_id == 2">
+        <h1>{{offer.offer_status_id}}</h1>
+        <img class="card-img-top" *ngIf="offer.user.id == isBidder.id"
+          src="https://rukminim1.flixcart.com/image/332/398/watch/5/h/y/curren-8152-curren-original-imaecw9g7hqp85nw.jpeg?q=50"
+          alt="Card image cap" href="#/">
+        <span *ngIf="offer.user.id == isBidder.id">{{item.name}}</span>
+        <br>
+        <span *ngIf="offer.user.id == isBidder.id">{{item.description}}</span>
+        <br>
+        <span *ngIf="offer.user.id == isBidder.id">{{offer.description}}</span>
+        <br>
+      </div>
     </div>
   </div>
-</div>
+</div> -->
+
+<div id="showOffersForItemsThisUserHasWon" class="card-deck" style="width: 70rem;" *ngFor="let item of items">
+
+    <div *ngIf="item.itemStatus == 1">
+      <!-- <h1>{{item.description}}</h1> -->
+      <div *ngIf="item.offers.length > 0">
+        <div *ngFor="let offer of item.offers">
+            <div *ngIf="offer.offerStatus == 1">
+          <br>
+          <br>
+          <br>
+          <!-- <div *ngIf="offer.offer_status_id == 2"> -->
+          <!-- <h1>{{offer.offer_status_id}}</h1> -->
+          <h1>Items I won</h1>
+          <img class="card-img-top" *ngIf="offer.user.id == isBidder.id"
+            src="https://rukminim1.flixcart.com/image/332/398/watch/5/h/y/curren-8152-curren-original-imaecw9g7hqp85nw.jpeg?q=50"
+            alt="Card image cap" href="#/">
+          <span *ngIf="offer.user.id == isBidder.id">{{item.name}}</span>
+          <br>
+          <span *ngIf="offer.user.id == isBidder.id">{{item.description}}</span>
+          <br>
+          <span *ngIf="offer.user.id == isBidder.id">{{offer.description}}</span>
+          <br>
+        </div>
+      </div>
+    </div>
+  </div>
