--- a/Angular/eBarter/src/app/components/list-item/list-item.component.html
+++ b/Angular/eBarter/src/app/components/list-item/list-item.component.html
@@ -17,13 +17,13 @@
     <label> Name</label>
     <input type="text" class="form-control" name="name" #name [(ngModel)]="item.name">
   </div>
-  <div class="form-group">
+  <!-- <div class="form-group">
     <label>End Date</label>
     <input type="date" class="form-control" name="endDate" #endDate [(ngModel)]="item.endDate">
-  </div>
-  <!-- <div class="form-group">
-      <input type="text" class="form-control" name="user" #user_id [(ngModel)]="item.user">
-    </div> -->
+  </div> -->
+    <div class="form-group">
+        <input type="hidden" class="form-control" name="user" #user_id [(ngModel)]="bidder.id">
+      </div>
     <!-- <div class="form-group">
       <input type="hidden" class="form-control" name="user_id" #user_id [(ngModel)]="user.id">
     </div> -->
