--- a/Angular/eBarter/src/app/components/homepage/homepage.component.html
+++ b/Angular/eBarter/src/app/components/homepage/homepage.component.html
@@ -32,27 +32,27 @@
 <div class="col-md-3" id="sideBarLeft">
   <br>
   <br>
-  <p class="lead">Brand</p>
+  <!-- <p class="lead">Brand</p> -->
   <div class="list-group">
-    <a class="list-group-item" href="#/">All</a>
+    <!-- <a class="list-group-item" href="#/">All</a>
     <a class="list-group-item ng-binding ng-scope" >Test
-    </a>
+    </a> -->
   </div>
-  <p class="lead">Colors</p>
+  <!-- <p class="lead">Colors</p> -->
   <div class="list-group">
-    <a class="list-group-item" href="#/" href="#/">All</a>
+    <!-- <a class="list-group-item" href="#/" href="#/">All</a>
     <a class="list-group-item ng-binding ng-scope" ng-class="{'active': color === vm.params.color}"
       ng-repeat="color in vm.colors" href="#/">Silver
     </a><a class="list-group-item ng-binding ng-scope" href="#/">White
-    </a>
+    </a> -->
   </div>
-  <p class="lead">Items</p>
+  <!-- <p class="lead">Items</p> -->
   <div class="list-group">
-    <a class="list-group-item"href="#/">All</a>
+    <!-- <a class="list-group-item"href="#/">All</a>
     <a class="list-group-item ng-binding ng-scope" href="#/" >Current Offers On Items
-      <!-- ngIf: category === vm.params.value --></a><!-- end ngRepeat: category in vm.categories --><a
-      class="list-group-item ng-binding ng-scope"href="#/">Items Won
-      <!-- ngIf: category === vm.params.value --></a><!-- end ngRepeat: category in vm.categories -->
+       ngIf: category === vm.params.value </a> end ngRepeat: category in vm.categories <a
+      class="list-group-item ng-binding ng-scope"href="#/">Items Won</a> -->
+      <!-- ngIf: category === vm.params.value --><!-- end ngRepeat: category in vm.categories -->
   </div>
 </div>
 
