--- a/Angular/eBarter/src/app/components/registration/registration.component.html
+++ b/Angular/eBarter/src/app/components/registration/registration.component.html
@@ -7,15 +7,18 @@
 
     <div class="registerDiv">
       <h2>Register</h2>
-      <form>
 
-        <tbody>
 
-          <tr>
-            <td>
-              <div id="firstName">
-                <label for="firstName">First Name</label>
-                <input type="text" name="firstName" [(ngModel)]="newUser.firstName">
+      <form [formGroup]="angForm" novalidate>
+        <tr>
+          <td>
+            <div class="form-group" id="firstName">
+                <label class="center-block">First Name:
+                <input class="form-control" type="text" formControlName="firstName" [(ngModel)]="newUser.firstName">
+              </label>
+              </div>
+              <div *ngIf="angForm.control['firstName'].invalid && (angForm.controls['firstName'].dirty || angForm.controls['firstName'].touched)" class="alert alert-danger">
+                <div *ngIf="angForm.controls['firstName'].errors.required">First name is required.</div>
               </div>
 
             </td>
@@ -88,7 +91,7 @@
             </td>
           </tr>
 
-        </tbody>
+
         <br>
         <tr>
           <td>
