--- a/Angular/eBarter/src/app/components/registration/registration.component.html
+++ b/Angular/eBarter/src/app/components/registration/registration.component.html
@@ -17,23 +17,27 @@
                 <input class="form-control" type="text" formControlName="firstName" [(ngModel)]="newUser.firstName">
               </label>
               </div>
-              <div *ngIf="angForm.control['firstName'].invalid && (angForm.controls['firstName'].dirty || angForm.controls['firstName'].touched)" class="alert alert-danger">
+              <div *ngIf="angForm.controls['firstName'].invalid && (angForm.controls['firstName'].dirty || angForm.controls['firstName'].touched)" class="alert alert-danger">
                 <div *ngIf="angForm.controls['firstName'].errors.required">First name is required.</div>
               </div>
 
             </td>
             <td>
-              <div id="lastName">
-                <label for="lastName">Last Name</label>
-                <input type="text" name="lastName" [(ngModel)]="newUser.lastName" />
-              </div>
+              <div class="form-group" id="lastName">
+                <label for="lastName">Last Name
+                  <input class="form-control" type="text" formControlName="lastName" [(ngModel)]="newUser.lastName" />
+                </label>
+                </div>
+                <div *ngIf="angForm.controls['lastName'].invalid && (angForm.controls['lastName'].dirty || angForm.controls['lastName'].touched)" class="alert alert-danger">
+                    <div *ngIf="angForm.controls['lastName'].errors.required">Last name is required.</div>
+                  </div>
 
             </td>
           </tr>
 
           <tr>
             <td>
-              <div id="username">
+              <div class="form-name" id="username">
                 <label for="username">Username</label>
                 <input type="text" name="username" [(ngModel)]="newUser.username" />
               </div>
