too much to list

--- a/Angular/eBarter/src/app/components/homepage/homepage.component.css
+++ b/Angular/eBarter/src/app/components/homepage/homepage.component.css
@@ -90,3 +90,10 @@ h2{
   max-width: 500px;
 
 }
+
+.warningDiv {
+  color: red;
+  font-weight: bold;
+  text-decoration: underline;
+  text-align: center;
+}
