--- a/Angular/eBarter/src/app/components/homepage/homepage.component.html
+++ b/Angular/eBarter/src/app/components/homepage/homepage.component.html
@@ -29,33 +29,8 @@
 <br>
 <br>
 <br>
-<div class="col-md-3" id="sideBarLeft">
-  <br>
-  <br>
-  <p class="lead">Brand</p>
-  <div class="list-group">
-    <a class="list-group-item" href="#/">All</a>
-    <a class="list-group-item ng-binding ng-scope" >Test
-    </a>
-  </div>
-  <p class="lead">Colors</p>
-  <div class="list-group">
-    <a class="list-group-item" href="#/" href="#/">All</a>
-    <a class="list-group-item ng-binding ng-scope" ng-class="{'active': color === vm.params.color}"
-      ng-repeat="color in vm.colors" href="#/">Silver
-    </a><a class="list-group-item ng-binding ng-scope" href="#/">White
-    </a>
-  </div>
-  <p class="lead">Items</p>
-  <div class="list-group">
-    <a class="list-group-item"href="#/">All</a>
-    <a class="list-group-item ng-binding ng-scope" href="#/" >Current Offers On Items
-      <!-- ngIf: category === vm.params.value --></a><!-- end ngRepeat: category in vm.categories --><a
-      class="list-group-item ng-binding ng-scope"href="#/">Items Won
-      <!-- ngIf: category === vm.params.value --></a><!-- end ngRepeat: category in vm.categories -->
-  </div>
-</div>
 
+<div *ngIf='!showWarning && !showSuspended'>
 <div class="card-deck" style="width: 70rem;" *ngFor="let item of itemsNoAuth">
   <div class="card">
     <img class="card-img-top"
@@ -75,6 +50,13 @@
       <hr>
     </div>
   </div>
+</div>
+</div>
+<div *ngIf='showWarning' class='warningDiv'>
+  <h1>You must login to continue!</h1>
+</div>
+<div *ngIf='showSuspended' class='warningDiv'>
+  <h1>Your account has been suspended!</h1>
 </div>
 <br>
 
