--- a/Angular/eBarter/src/app/components/navbar/navbar.component.html
+++ b/Angular/eBarter/src/app/components/navbar/navbar.component.html
@@ -17,7 +17,7 @@
         </div>
       </span>
     </span>
-      <span>The Web's Most Exciting Marketplace!</span>
+      <span>Denver's Most Exciting Marketplace!</span>
       <span class='float-right welcome'>Welcome {{displayName}}</span>
   </div>
 
@@ -25,7 +25,7 @@
       <span class='float-left'>
         <span (click)='navHome()'>eBarter!</span>
       </span>
-      <span class='welcome'>The Web's Most Exciting Marketplace!</span>
+      <span class='welcome'>Denver's Most Exciting Marketplace!</span>
       <span class='float-right'>
           <form loginform>
             <input class='login-box' type='text' placeholder='username' name='username' id='namebox' [(ngModel)]='logincombo.username'>
