--- a/Angular/eBarter/src/app/components/registration/registration.component.html
+++ b/Angular/eBarter/src/app/components/registration/registration.component.html
@@ -2,96 +2,122 @@
 <br>
 <div class="container">
 
-  <div class="row">
-    <div class="col-sm-5"></div>
 
-    <div class="registerDiv">
       <h2>Register</h2>
 
 
       <form [formGroup]="angForm" novalidate>
+
         <tr>
           <td>
             <div class="form-group" id="firstName">
-                <label class="center-block">First Name:
+                <label class="center-block">First Name</label>
                 <input class="form-control" type="text" formControlName="firstName" [(ngModel)]="newUser.firstName">
-              </label>
-              </div>
-              <div *ngIf="angForm.controls['firstName'].invalid && (angForm.controls['firstName'].dirty || angForm.controls['firstName'].touched)" class="alert alert-danger">
-                <div *ngIf="angForm.controls['firstName'].errors.required">First name is required.</div>
-              </div>
 
-            </td>
+                <div *ngIf="angForm.controls['firstName'].invalid && (angForm.controls['firstName'].dirty || angForm.controls['firstName'].touched)" class="alert alert-danger">
+                  <div *ngIf="angForm.controls['firstName'].errors.required">First name is Required.</div>
+                </div>
+              </div>
+              </td>
+
             <td>
               <div class="form-group" id="lastName">
-                <label for="lastName">Last Name
+                <label class="center-block">Last Name</label>
                   <input class="form-control" type="text" formControlName="lastName" [(ngModel)]="newUser.lastName" />
-                </label>
-                </div>
-                <div *ngIf="angForm.controls['lastName'].invalid && (angForm.controls['lastName'].dirty || angForm.controls['lastName'].touched)" class="alert alert-danger">
-                    <div *ngIf="angForm.controls['lastName'].errors.required">Last name is required.</div>
+
+                  <div *ngIf="angForm.controls['lastName'].invalid && (angForm.controls['lastName'].dirty || angForm.controls['lastName'].touched)" class="alert alert-danger">
+                    <div *ngIf="angForm.controls['lastName'].errors.required">Last name is Required.</div>
                   </div>
+                </div>
 
             </td>
           </tr>
 
           <tr>
             <td>
-              <div class="form-name" id="username">
-                <label for="username">Username</label>
-                <input type="text" name="username" [(ngModel)]="newUser.username" />
+              <div class="form-group" id="username">
+                <label class="center-block">Username</label>
+                <input class="form-control" type="text" formControlName="username" [(ngModel)]="newUser.username" />
+
+              <div *ngIf="angForm.controls['username'].invalid && (angForm.controls['username'].dirty || angForm.controls['username'].touched)" class="alert alert-danger">
+                <div *ngIf="angForm.controls['username'].errors.required">User name is Required.</div>
               </div>
+            </div>
 
             </td>
             <td>
-              <div id="password">
-                <label for="password">Password</label>
-                <input type="password" name="password" [(ngModel)]="newUser.password" />
+              <div class="form-group" id="password">
+                <label class="center-block">Password</label>
+                <input class="form-control" type="password" formControlName="password" [(ngModel)]="newUser.password" />
+
+              <div *ngIf="angForm.controls['password'].invalid && (angForm.controls['password'].dirty || angForm.controls['password'].touched)" class="alert alert-danger">
+                <div *ngIf="angForm.controls['password'].errors.required">Password is Required.</div>
               </div>
-
-            </td>
-          </tr>
-
-          <tr>
-            <td>
-              <div id="email">
-                <label for="email">Email</label>
-                <input type="text" name="email" [(ngModel)]="newUser.email" />
-              </div>
-
-            </td>
-            <td>
-              <div id="street">
-                <label for="street">Street</label>
-                <input type="text" name="street" [(ngModel)]="newUser.address.street" />
-              </div>
-            </td>
-
-          </tr>
-
-          <tr>
-            <td>
-              <div id="state">
-                <label for="state">States</label>
-                <input type="text" name="state" [(ngModel)]="newUser.address.state" />
-              </div>
-
-            </td>
-            <td>
-              <div id="city">
-                <label for="city">City</label>
-                <input type="text" name="city" [(ngModel)]="newUser.address.city" />
-              </div>
+            </div>
 
             </td>
           </tr>
 
           <tr>
             <td>
-              <div id="zipcode">
-                <label for="zipcode">Zipcode</label>
-                <input type="number" name="zipcode" [(ngModel)]="newUser.address.zipCode" />
+              <div class="form-group" id="email">
+                <label class="center-block">Email</label>
+                <input class="form-control" type="text" formControlName="email" [(ngModel)]="newUser.email" />
+
+              <div *ngIf="angForm.controls['email'].invalid && (angForm.controls['email'].dirty || angForm.controls['email'].touched)" class="alert alert-danger">
+                <div *ngIf="angForm.controls['email'].errors.required">Email is Required.</div>
               </div>
+            </div>
+
+            </td>
+            <td>
+              <div class="form-group" id="street">
+                <label class="center-block">Street</label>
+                <input class="form-control" type="text" formControlName="street" [(ngModel)]="newUser.address.street" />
+
+              <div *ngIf="angForm.controls['street'].invalid && (angForm.controls['street'].dirty || angForm.controls['street'].touched)" class="alert alert-danger">
+                <div *ngIf="angForm.controls['street'].errors.required">Street is Required.</div>
+              </div>
+            </div>
+            </td>
+
+          </tr>
+
+          <tr>
+            <td>
+              <div class="form-group" id="city">
+                <label class="center-block">City</label>
+                <input class="form-control" type="text" formControlName="city" [(ngModel)]="newUser.address.city" />
+
+              <div *ngIf="angForm.controls['city'].invalid && (angForm.controls['city'].dirty || angForm.controls['city'].touched)" class="alert alert-danger">
+                <div *ngIf="angForm.controls['city'].errors.required">City is Required.</div>
+              </div>
+            </div>
+            </td>
+            <td>
+              <div class="form-group" id="state">
+                <label class="center-block">State</label>
+                <input class="form-control" type="text" formControlName="state" [(ngModel)]="newUser.address.state" />
+
+              <div *ngIf="angForm.controls['state'].invalid && (angForm.controls['state'].dirty || angForm.controls['state'].touched)" class="alert alert-danger">
+                <div *ngIf="angForm.controls['state'].errors.required">State is Required.</div>
+              </div>
+            </div>
+
+            </td>
+
+          </tr>
+
+          <tr>
+            <td>
+              <div class="form-group" id="zipcode">
+                <label class="center-block">Zipcode</label>
+                <input class="form-control" type="number" formControlName="zipcode" [(ngModel)]="newUser.address.zipCode" />
+
+              <div *ngIf="angForm.controls['zipcode'].invalid && (angForm.controls['zipcode'].dirty || angForm.controls['zipcode'].touched)" class="alert alert-danger">
+                <div *ngIf="angForm.controls['zipcode'].errors.required">Required</div>
+              </div>
+            </div>
             </td>
           </tr>
 
@@ -102,12 +128,10 @@
             <div class="form-group" id="submit">
               <input type='submit' (click)='onSubmit()' class="btn btn-primary">
 
-              <a routerLink="/login" class="btn btn-link">Cancel</a>
+              <a routerLink="/home" class="btn btn-link">Cancel</a>
             </div>
           </td>
         </tr>
 
       </form>
     </div>
-  </div>
-</div>
