--- a/Angular/eBarter/src/app/components/registration/registration.component.html
+++ b/Angular/eBarter/src/app/components/registration/registration.component.html
@@ -2,8 +2,10 @@
 <br>
 <div class="container">
 
+    <div id="rig">
 
-      <h2>Register</h2>
+      <h1>Register</h1>
+    </div>
 
 
       <form [formGroup]="angForm" novalidate>
