beautify item list page

--- a/Angular/eBarter/src/app/components/list-item/list-item.component.css
+++ b/Angular/eBarter/src/app/components/list-item/list-item.component.css
@@ -2,3 +2,20 @@
   text-align: center;
   margin-left: 600px;
 }
+#itemname{
+  margin-left: 30%;
+  margin-right: 30%;
+}
+#desc{
+  margin-left: 30%;
+  margin-right: 30%;
+}
+#image{
+  margin-left: 30%;
+  margin-right: 30%;
+}
+#sub{
+  margin-left: 30%;
+  margin-right: 30%;
+}
+
