--- a/Angular/eBarter/src/app/components/list-item/list-item.component.html
+++ b/Angular/eBarter/src/app/components/list-item/list-item.component.html
@@ -5,37 +5,42 @@
 <br>
 <br>
 <br>
-<div class="container">
-<form>
-  <div class="form-group">
-    <br>
-    <label>Description</label>
-    <!-- <input type="text" class="form-control" name="description" #description> -->
-    <input type="text" class="form-control" name="description" #description [(ngModel)]="item.description">
-  </div>
-  <div class="form-group">
-    <label> Name</label>
-    <input type="text" class="form-control" name="name" #name [(ngModel)]="item.name">
-  </div>
-  <!-- <div class="form-group">
-    <label>End Date</label>
-    <input type="date" class="form-control" name="endDate" #endDate [(ngModel)]="item.endDate">
-  </div> -->
-    <div class="form-group">
+<div class="container" >
+  <form [formGroup]="angForm" novalidate>
+    <div class="form-group" id="itemname">
+      <br>
+      <label> Name </label>
+      <input type="text" class="form-control" name="name" #name [(ngModel)]="item.name">
+    </div>
+
+    <div class="form-group" id="desc">
+      <label>Description</label>
+      <!-- <input type="text" class="form-control" name="description" #description> -->
+      <input type="text" class="form-control" name="description" #description [(ngModel)]="item.description">
+    </div>
+
+    <div class="form-group" id="image">
+      <label>Image</label>
+      <input type="text" class="form-control" name="image" #endDate [(ngModel)]="item.imageUrl">
+    </div>
+    <!-- <div class="form-group">
         <input type="hidden" class="form-control" name="user" #user_id [(ngModel)]="bidder.id">
-      </div>
+      </div> -->
     <!-- <div class="form-group">
       <input type="hidden" class="form-control" name="user_id" #user_id [(ngModel)]="user.id">
     </div> -->
-      <!-- <div class="form-group">
+    <!-- <div class="form-group">
         <input type="text" class="form-control" name="user" #user_id [(ngModel)]="item.user_id">
       </div> -->
-  <!-- <div class="form-group">
+    <!-- <div class="form-group">
     <label>User Id</label>
     <input type="text" class="form-control" name="user_id" #user_id>
   </div> -->
-  <!-- <button (click)="addItem(description.value, name.value, endDate.value, user_id.value)" class="btn btn-dark">Add -->
-  <button (click)="addItem(item)" class="btn btn-dark">Add
-    Item</button>
-</form>
+    <!-- <button (click)="addItem(description.value, name.value, endDate.value, user_id.value)" class="btn btn-dark">Add -->
+      <div class="form-group" id="sub">
+
+        <button (click)="addItem(item)" class="btn btn-dark">Add
+          Item</button>
+        </div>
+  </form>
 </div>
