items selling works

--- a/Angular/eBarter/src/app/components/item-detail/item-detail.component.html
+++ b/Angular/eBarter/src/app/components/item-detail/item-detail.component.html
@@ -25,26 +25,44 @@
 
 
 <div class="imageLocation">
-  ​<picture>
+  ​<picture *ngIf='!showOffer'>
     <source
-      srcset="https://www.dunkindonuts.com/content/dam/dd/img/heros-lifestyle/standard/hero-ddcard-lp-donuts-card-640x640.jpg"
+      srcset={{item.imageUrl}}
       type="image/svg+xml">
     <img src="..." class="img-fluid img-thumbnail" alt="...">
   </picture>
+  ​<picture *ngIf='showOffer'>
+      <source
+        srcset={{offer.imgUrl}}
+        type="image/svg+xml">
+      <img src="..." class="img-fluid img-thumbnail" alt="...">
+    </picture>
   <ul class="list-group" id="information-on-item">
-    <li class="list-group-item">{{item.description}}</li>
-    <li class="list-group-item">{{item.name}}</li>
+    <li *ngIf='!won && showOffer' class="list-group-item bold">Offer Details:</li>
+    <li *ngIf='!won && !showOffer' class="list-group-item bold">Item Details:</li>
+    <li *ngIf='won' class="list-group-item bold">Your Offer Was Accepted!</li>
+    <li *ngIf='!showOffer' class="list-group-item">Item: {{item.name}}</li>
+    <li *ngIf='!showOffer' class="list-group-item">Description: {{item.description}}</li>
+    <li *ngIf='showOffer' class="list-group-item">{{offer.description}}</li>
+    <li *ngIf='won' class="list-group-item bold">Contact the seller to complete the deal!</li>
+    <li *ngIf='won' class="list-group-item">Seller: {{item.user.firstName}} {{item.user.lastName}}</li>
+    <li *ngIf='won' class="list-group-item">Email: {{item.user.email}}</li>
     <!-- <li class="list-group-item">{{item.endDate}}</li> -->
+    <div *ngIf='!won'>
     <br>
-    <app-ngbd-modal-config></app-ngbd-modal-config>
+      <app-ngbd-modal-config></app-ngbd-modal-config>
     <br>
-
+    </div>
   <!-- <button class="btn btn-success" data-toggle="modal" id="SubmitOffer">Submit My Offer</button> -->
    </ul>
 </div>
 
 <br>
 <br>
+<div *ngIf='!won'>
+    <div id='no-offers' *ngIf='offers.length === 0'>
+       <h2>This item has no offers yet!  Be the first to make an offer!</h2>
+    </div>
  <div class="container" *ngFor="let offer of offers" id="tableForOffers">
    <!-- <h1>{{offer.id}}</h1> -->
 <!-- //*ngFor="let item of items" -->
@@ -66,13 +84,15 @@
         <td >{{offer.user.address.city}} &nbsp;{{offer.user.address.state}}&nbsp;{{offer.user.address.zipCode}}</td>
         <!-- <td *ngFor="let item of items"> -->
           <!-- <p *ngFor="let user of users"></p> -->
+          <button *ngIf='selling' (click)='viewOffer(offer)' class="btn btn-success">View Offer</button>
+          <span class='spacer'></span>
           <button class="btn btn-success">Accept</button>
           <!-- <button class="btn btn-success" *ngIf="user.offer.id == user.id">Accept</button> -->
       </tr>
     </tbody>
   </table>
 </div>
-
+</div>
 <!-- <br>
 <br>
 <div class="container" *ngFor="let user of users" id="tableForOffers">
