--- a/Angular/eBarter/src/app/components/item-detail/item-detail.component.css
+++ b/Angular/eBarter/src/app/components/item-detail/item-detail.component.css
@@ -20,7 +20,7 @@ img {
   -moz-box-shadow: 7px 2px 18px 5px rgba(0, 0, 0, 0.43);
   box-shadow: 7px 2px 18px 5px rgba(0, 0, 0, 0.43);
   border-radius: 8px;
-  margin-top: 4%;
+  margin-top: 5%;
   margin-left: 20%;
 }
 
@@ -30,7 +30,8 @@ ul {
   bottom: 310px;
   margin-left: 50%;
   width: 425px;
-  height: 300px;
+  /* height: 300px; */
+  margin-top: 3%;
 }
 
 #currentOffers{
@@ -47,8 +48,14 @@ bottom: 310px;
   text-align: center;
   position: relative;
   bottom: 150px;
-
 }
+
+#no-offers{
+  position: relative;
+  margin-right: 40%;
+  text-align: left;
+}
+
 .table-sm th, .table-sm td {
   padding: 0.3rem;
   text-align: center;
@@ -57,4 +64,14 @@ bottom: 310px;
 
 body{
   background-color: #f0eeec!important;
+}
+
+.bold {
+  font-weight: bold;
+  font-size: 110%;
+  text-decoration: underline;
+}
+
+.spacer {
+  padding-left: 15px;
 }
