hope this works

--- a/Angular/eBarter/src/app/components/item-detail/item-detail.component.html
+++ b/Angular/eBarter/src/app/components/item-detail/item-detail.component.html
@@ -50,7 +50,9 @@
     <!-- <li class="list-group-item">{{item.endDate}}</li> -->
     <div *ngIf='!won'>
     <br>
+    <div *ngIf='!selling'>
       <app-ngbd-modal-config></app-ngbd-modal-config>
+    </div>
     <br>
     </div>
   <!-- <button class="btn btn-success" data-toggle="modal" id="SubmitOffer">Submit My Offer</button> -->
