--- a/Angular/eBarter/src/app/components/list-item/list-item.component.html
+++ b/Angular/eBarter/src/app/components/list-item/list-item.component.html
@@ -17,6 +17,10 @@
     <label> Name</label>
     <input type="text" class="form-control" name="name" #name [(ngModel)]="item.name">
   </div>
+  <div class="form-group">
+      <label> Image Url</label>
+      <input type="text" class="form-control" name="imageUrl" #imageUrl [(ngModel)]="item.imageUrl">
+    </div>
   <!-- <div class="form-group">
     <label>End Date</label>
     <input type="date" class="form-control" name="endDate" #endDate [(ngModel)]="item.endDate">
